# task-downloader

./: .gitignore  CI.sh  README.md  docker-compose.ci.yml  docker-compose.yml  instructions.md  rabbitmq.conf
backend/: .flake8  .gitignore  Dockerfile  README.rst  pyproject.toml  pyrightconfig.json
backend/.devcontainer/: devcontainer.json
backend/backend/: config.py  dal.py  main.py
backend/backend/celery/: tasks.py  worker.py
backend/backend/db/: database.py
backend/backend/routers/: task_router.py
backend/backend/schemas/: schemas.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_remote_api.py  test_upload.py  users_posts_audience.csv
