[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Michal Lipinski <michal.lipinski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"
pydantic = "^1.9.1"
aiohttp = "^3.8.1"
requests = "^2.27.1"
debugpy = "^1.6.0"
aiofiles = "^0.8.0"
aiosqlite = "^0.17.0"
pytest-asyncio = "^0.18.3"
celery = "^5.2.7"
flower = "^1.0.0"
redis = "^4.3.3"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pyright = "^1.1.248"
pytest = "7.1.2"
requests = "^2.27.1"
httpx = "^0.23.0"
pytest-xdist = "^2.5.0"
types-redis = "^4.2.6"
celery-types = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
skip-string-normalization = true
